@@ -264,8 +264,8 @@ class Collector(object):
         try:
             idata = None
 
-            fl = open(filename, "rb")
-            idata = numpy.fromfile(fl, dtype=dtype)
+            with open(filename, "rb") as fl:
+                idata = numpy.fromfile(fl, dtype=dtype)
             if shape:
                 idata = idata.reshape(shape)
             dtype = idata.dtype.__str__()
@@ -360,8 +360,8 @@ class Collector(object):
         """ creates a field in nexus file
 
         :param node: parent hdf5 node
-        :type node: :class:`pni.io.nx.h5.nxgroup` or \
-                    :class:`pni.io.nx.h5.nxlink`
+        :type node: :class:`filewriter.FTGroup` or \
+                    :class:`filewriter.FTLink`
         :param fieldname: field name
         :type fieldname: :obj:`str`
         :param dtype: field data type
@@ -373,7 +373,7 @@ class Collector(object):
         :param fieldcompression: field compression rate
         :type fieldcompression: :obj:`int`
         :returns: hdf5 field node
-        :rtype: :class:`pni.io.nx.h5.nxfield`
+        :rtype: :class:`filewriter.FTField`
         """
         field = None
         if fieldname in node.names():
@@ -406,8 +406,8 @@ class Collector(object):
         :param files: a list of file strings
         :type files: :obj:`list` <:obj:`str`>
         :param node: hdf5 parent node
-        :type node: :class:`pni.io.nx.h5.nxgroup` or \
-                    :class:`pni.io.nx.h5.nxlink`
+        :type node: :class:`filewriter.FTGroup` or \
+                    :class:`filewriter.FTLink`
         :param fieldname: field name
         :type fieldname: :obj:`str`
         :param fieldattrs: dictionary with field attributes
@@ -460,8 +460,8 @@ class Collector(object):
         by hdf5 postrun fields bellow hdf5 parent node
 
         :param parent: hdf5 parent node
-        :type parent: :class:`pni.io.nx.h5.nxgroup` or \
-                      :class:`pni.io.nx.h5.nxlink`
+        :type parent: :class:`filewriter.FTGroup` or \
+                      :class:`filewriter.FTLink`
         :param collection: if parent is of NXcollection type
         :type collection: :obj:`bool`
         """
@@ -515,11 +515,56 @@ class Collector(object):
                                 coll = True
                     self._inspect(child, coll)
 
-    def collect(self):
+    def _add(self, root, path, inputfiles, fieldtype=None, fieldshape=None):
+        """appends specific data if path and inputfiles are given
+
+        :param path: nexus path of the data field
+        :type path: :obj:`str`
+        :param inputfiles: a list of file strings
+        :type inputfiles: :obj:`list` <:obj:`str`>
+        :param datatype: field data type
+        :type datatype: :obj:`str`
+        :param shape: field shape
+        :type shape: :obj:`list` <:obj:`int` >
+        """
+        groups = path.split("/")
+        parent = root
+        tgr = ""
+        for gr in groups[:-1]:
+            if ":" in gr:
+                gr, tgr = gr.split(":", 1)
+            if gr in parent.names():
+                parent = parent.open(gr)
+            else:
+                if not tgr:
+                    tgr = "NX" + gr
+                parent = parent.create_group(gr, tgr)
+                # raise Exception(
+                #     "Error: path %s in % cannot be open" % (path, gr))
+
+        fieldname = groups[-1]
+        print("populate: %s/%s with %s" % (parent.path, fieldname, inputfiles))
+        fieldcompression = self.__compression
+        fieldattrs = {}
+        self._collectimages(
+            inputfiles, parent, fieldname, fieldattrs,
+            fieldcompression, fieldtype, fieldshape)
+
+    def collect(self, path=None, inputfiles=None, datatype=None, shape=None):
         """ creates a temporary file,
         collects the all image files defined by hdf5
         postrun fields of NXcollection groups and renames the temporary file
         to the origin one if the action was successful
+        or appends specific data if path and inputfiles are given
+
+        :param path: nexus path of the data field
+        :type path: :obj:`str`
+        :param inputfiles: a list of file strings
+        :type inputfiles: :obj:`list` <:obj:`str`>
+        :param datatype: field data type
+        :type datatype: :obj:`str`
+        :param shape: field shape
+        :type shape: :obj:`list` <:obj:`int` >
         """
         self._createtmpfile()
         try:
@@ -532,7 +577,10 @@ class Collector(object):
                 # print self.__fullfilename
             except Exception:
                 pass
-            self._inspect(root)
+            if path and inputfiles:
+                self._add(root, path, inputfiles, datatype, shape)
+            else:
+                self._inspect(root)
             self.__nxsfile.close()
             if self.__storeold:
                 self._storeoldfile()
@@ -562,10 +610,30 @@ class Execute(Runner):
         parser = self._parser
         parser.add_argument(
             "-c", "--compression", dest="compression",
-            action="store", type=str, default=2,
+            action="store", type=str, default="2",
             help="deflate compression rate from 0 to 9 (default: 2)"
             " or <filterid>:opt1,opt2,..."
             " e.g.  -c 32008:0,2  for bitshuffle with lz4")
+        parser.add_argument(
+            "-p", "--path", dest="path",
+            action="store", type=str, default=None,
+            help="nexus path for the output field, e.g."
+            " /scan/instrument/pilatus/data")
+        parser.add_argument(
+            "-i", "--input_files", dest="inputfiles",
+            action="store", type=str, default=None,
+            help="nexus path for the output field, e.g."
+            "'scan_%%05d.tif:0:100'")
+        parser.add_argument(
+            "--dtype", dest="datatype",
+            action="store", type=str, default=None,
+            help="datatype of input data - only for raw data,"
+            " e.g. 'uint8'")
+        parser.add_argument(
+            "--shape", dest="shape",
+            action="store", type=str, default=None,
+            help="shape of input data - only for raw data,"
+            " e.g. '[4096,2048]'")
         parser.add_argument(
             "-s", "--skip_missing", action="store_true",
             default=False, dest="skipmissing",
@@ -637,13 +705,33 @@ class Execute(Runner):
             sys.stderr.flush()
             parser.print_help()
             sys.exit(255)
+        if (options.path and not options.inputfiles):
+            sys.stderr.write(
+                "nxscollect: --input_files argument is missing")
+            parser.print_help()
+            sys.exit(255)
+        if (not options.path and options.inputfiles):
+            sys.stderr.write(
+                "nxscollect: --path argument is missing")
+            parser.print_help()
+            sys.exit(255)
+        shape = None
+        if options.shape:
+            try:
+                shape = json.loads(options.shape)
+            except Exception:
+                sys.stderr.write(
+                    "nxscollect: shape is not readable")
+                parser.print_help()
+                sys.exit(255)
 
         # configuration server
         for nxsfile in nexusfiles:
             collector = Collector(
                 nxsfile, options.compression, options.skipmissing,
                 not options.replaceold, False, writer=writer)
-            collector.collect()
+            collector.collect(options.path, options.inputfiles,
+                              options.datatype, shape)
 
 
 class Test(Execute):
@@ -699,13 +787,33 @@ class Test(Execute):
                              % writer)
             parser.print_help()
             sys.exit(255)
+        if (options.path and not options.inputfiles):
+            sys.stderr.write(
+                "nxscollect: --input_files argument is missing")
+            parser.print_help()
+            sys.exit(255)
+        if (not options.path and options.inputfiles):
+            sys.stderr.write(
+                "nxscollect: --path argument is missing")
+            parser.print_help()
+            sys.exit(255)
+        shape = None
+        if options.shape:
+            try:
+                shape = json.loads(options.shape)
+            except Exception:
+                sys.stderr.write(
+                    "nxscollect: shape is not readable")
+                parser.print_help()
+                sys.exit(255)
 
         # configuration server
         for nxsfile in nexusfiles:
             collector = Collector(
                 nxsfile, options.compression, options.skipmissing,
                 not options.replaceold, True, writer=writer)
-            collector.collect()
+            collector.collect(options.path, options.inputfiles,
+                              options.datatype, shape)
 
 
 def _supportoldcommands():
